[package]
name = "bgpstream"
version = "0.2.2"
authors = ["Benjamin VanderSloot <admin@benvds.com>"]
description = "Safe wrapper of a limited subset of libbgpstream"
license = "CC-BY-NC-4.0"
homepage = "https://github.com/bvandersloot/bgpstream"
repository = "https://github.com/bvandersloot/bgpstream"

[dependencies]
bgpstream-sys = "^0.3"
num-traits = "^0.2"
num-derive = "^0.2"
